[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Art/PlayerUI/DeathUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Menu/Overlay.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Menu/Title.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/PlayerUI/RetryButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/PlayerUI/QuitButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/PlayerUI/ScoreText.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/PlayerUI/HighScorePicture.png" type="Texture" id=7]

[node name="DeathUI" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Overlay" type="TextureRect" parent="." index="0"]

modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="TextureRect" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -65.0
margin_right = 63.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="RetryButton" type="TextureButton" parent="." index="2" groups=[
"Button",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = 19.0
margin_right = 33.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="QuitButton" type="TextureButton" parent="." index="3" groups=[
"Button",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = 44.0
margin_right = 33.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreBox" type="HBoxContainer" parent="." index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -7.0
margin_right = 100.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 4
alignment = 1
_sections_unfolded = [ "Anchor", "custom_constants" ]

[node name="ScoreText" type="TextureRect" parent="ScoreBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 109.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 4
_sections_unfolded = [ "Margin" ]

[node name="Numbers" type="HBoxContainer" parent="ScoreBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_right = 113.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Rect", "custom_constants" ]

[node name="Separator" type="TextureRect" parent="ScoreBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 117.0
margin_right = 117.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0

[node name="HighScoreImage" type="NinePatchRect" parent="ScoreBox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 121.0
margin_right = 135.0
margin_bottom = 18.0
rect_min_size = Vector2( 14, 18 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 14, 18 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
_sections_unfolded = [ "Axis Stretch", "Margin", "Rect" ]

[node name="Numbers" type="HBoxContainer" parent="ScoreBox/HighScoreImage" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 4.0
margin_right = 10.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Rect", "custom_constants" ]


